--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
   font-size: 50px;
   margin: 0;
@@ -5,12 +9,15 @@ h1 {
 
 ul {
   padding: 0;
-  margin: 5%;
-  line-height: 1em;
+  margin: 0;
 }
 
 li {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  line-height: 25px;
 }
 
 input {
@@ -36,18 +43,19 @@ p {
 }
 
 .city-border {
-  border: 1px solid gray;
+  border: 1px solid #dadde1;
   border-radius: 5px;
   padding: 10px;
   margin: 10px auto;
 }
 
 .icon {
-  max-width: 100px;
+  height: 76px;
+  width: 76px;
 }
 
 .weather-border {
-  border: 1px solid gray;
+  border: 1px solid #dadde1;
   border-radius: 5px;
   padding: 10px;
   margin: 10px auto;
@@ -67,9 +75,16 @@ p {
 }
 
 .weather-description {
-  font-size: 18px;
   line-height: 2;
-  width: 70%;
-  margin: auto;
-  margin-top: 13%;
+  margin: 0;
+  padding: 0;
+  margin-top: 8%;
+}
+
+.overwiew {
+  margin-bottom: 20px;
+}
+
+.weather-icon img {
+  margin-right: 100px;
 }
