--- a/src/styles.css
+++ b/src/styles.css
@@ -54,8 +54,8 @@ p {
 }
 
 .icon {
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
 }
 
 .weather-border {
@@ -63,6 +63,7 @@ p {
   border-radius: 5px;
   padding: 10px;
   margin: 10px auto;
+  text-align: center;
 }
 
 .units {
